:zap: Fix : 책 검색 기능 업그레이드
- totalPage 수정
- 원하는 검색 타입을 선택할 수 있도록 수정
