# src/architecture/controllers/book.controller.ts
@@ -17,7 +17,13 @@ class BookController {
             required: true,                     
             type: "string"         
         } */
-        /* #swagger.parameters['title'] = {
+        /* #swagger.parameters['type'] = {
+            in: "query",                            
+            description: "검색 타입 = title || author 등 book에 있는 모든 키값",                   
+            required: true,                     
+            type: "string"         
+        } */
+        /* #swagger.parameters['value'] = {
             in: "query",                            
             description: "검색어",                   
             required: true,                     
@@ -40,8 +46,10 @@ class BookController {
         /*  #swagger.responses[200] = {
             description: '도서 검색 성공',
             schema: {
+                "searchType": "author",
                 "page": 1,
-                "scale": 2,
+                "scale": 5,
+                "totalCount": 8,
                 "totalPage": 2,
                 "bookList": [
                     {
@@ -59,25 +67,29 @@ class BookController {
              } 
         }*/
         try {
-            let { title, page, scale }: any = request.query;
+            let { value, page, scale, type }: any = request.query;
 
-            if (!title || title.length === 0)
+            if (!value || value.length === 0)
                 throw new Error("Bad Request : 검색어를 입력해주세요.");
 
             if (!page || page === null) page = 1;
             if (!scale || scale === null) scale = 10;
+            if (!type || type === null) type = "title";
 
             const searchBookList = await this.bookService.searchAllBooks(
-                title,
+                value,
                 page,
                 scale,
+                type,
             );
 
             response.status(200).json({
+                searchType: type,
                 page: Number(page),
                 scale: Number(scale),
-                totalPage: searchBookList.count,
-                bookList: searchBookList.rows,
+                totalCount: searchBookList.totalCount,
+                totalPage: searchBookList.totalPage,
+                bookList: searchBookList.bookList,
             });
         } catch (error) {
             next(error);
